dw Question 3: items_by_region
Now let's find the most common item by post code. The post code information is in the practices DataFrame, and we'll need to merge it into the scripts DataFrame. Pandas provides extensive documentation with diagrammed examples on different methods and approaches for joining data. The merge method is only one of many possible options.

Return your results as a list of tuples (post code, item name, amount dispensed as % of total). Sort your results ascending alphabetically by post code and take only results from the first 100 post codes.

NOTE: Some practices have multiple postal codes associated with them. Use the alphabetically first postal code. Note some postal codes may have multiple 'bnf_name' with the same prescription rate for the maximum. In this case, take the alphabetically first 'bnf_name' (as in the PW miniproject).

practices.head()

	code 	name 	addr_1 	addr_2 	borough 	village 	post_code
0 	A81001 	THE DENSHAM SURGERY 	THE HEALTH CENTRE 	LAWSON STREET 	STOCKTON ON TEES 	CLEVELAND 	TS18 1HU
1 	A81002 	QUEENS PARK MEDICAL CENTRE 	QUEENS PARK MEDICAL CTR 	FARRER STREET 	STOCKTON ON TEES 	CLEVELAND 	TS18 2AW
2 	A81003 	VICTORIA MEDICAL PRACTICE 	THE HEALTH CENTRE 	VICTORIA ROAD 	HARTLEPOOL 	CLEVELAND 	TS26 8DB
3 	A81004 	WOODLANDS ROAD SURGERY 	6 WOODLANDS ROAD 	NaN 	MIDDLESBROUGH 	CLEVELAND 	TS1 3BE
4 	A81005 	SPRINGWOOD SURGERY 	SPRINGWOOD SURGERY 	RECTORY LANE 	GUISBOROUGH 	NaN 	TS14 7DJ

# list of unique practices

unique_practices = (practices

                    .sort_values('post_code')

                    .groupby('code')

                    .first()

                    .reset_index())[['code', 'post_code']]

​

unique_practices.head()

	code 	post_code
0 	A81001 	TS18 1HU
1 	A81002 	TS18 2AW
2 	A81003 	TS25 1QU
3 	A81004 	TS1 3BE
4 	A81005 	TS14 7DJ

unique_practices = (practices[['code', 'post_code']]

                    .sort_values(['code', 'post_code'])

                    .drop_duplicates(subset='code')

                    .reset_index()

                    .drop('index', axis=1))

unique_practices.head()

	code 	post_code
0 	A81001 	TS18 1HU
1 	A81002 	TS18 2AW
2 	A81003 	TS25 1QU
3 	A81004 	TS1 3BE
4 	A81005 	TS14 7DJ

scripts.head()

	practice 	bnf_code 	bnf_name 	items 	nic 	act_cost 	quantity
0 	N85639 	0106020C0 	Bisacodyl_Tab E/C 5mg 	1 	0.39 	0.47 	12
1 	N85639 	0106040M0 	Movicol Plain_Paed Pdr Sach 6.9g 	1 	4.38 	4.07 	30
2 	N85639 	0301011R0 	Salbutamol_Inha 100mcg (200 D) CFF 	1 	1.50 	1.40 	1
3 	N85639 	0304010G0 	Chlorphenamine Mal_Oral Soln 2mg/5ml 	1 	2.62 	2.44 	150
4 	N85639 	0401020K0 	Diazepam_Tab 2mg 	1 	0.16 	0.26 	6

# Join merge unique_practices with scripts

joined = scripts.merge(unique_practices, 

                       left_on='practice', 

                       right_on='code',

                       how='left')

# Total items for each bnf_name in each post code

post_item_totals = (joined.groupby(['post_code', 'bnf_name'])['items']

                    .sum()

                    .reset_index()

                    .sort_values(['post_code', 'items'], ascending=False))

​

post_item_totals.head()

	post_code 	bnf_name 	items
576696 	YO16 4LZ 	Aspirin Disper_Tab 75mg 	1194
576703 	YO16 4LZ 	Atorvastatin_Tab 20mg 	1122
578363 	YO16 4LZ 	Omeprazole_Cap E/C 20mg 	1119
577959 	YO16 4LZ 	Lansoprazole_Cap 30mg (E/C Gran) 	1044
578443 	YO16 4LZ 	Paracet_Tab 500mg 	1012

# Find most commonly prescribed item in each post code

max_items = post_item_totals.groupby('post_code').first()

max_items.head()

	bnf_name 	items
post_code 		
B11 4BW 	Salbutamol_Inha 100mcg (200 D) CFF 	706
B12 9LP 	Paracet_Tab 500mg 	425
B18 7AL 	Salbutamol_Inha 100mcg (200 D) CFF 	556
B21 9RY 	Metformin HCl_Tab 500mg 	1033
B23 6DJ 	Lansoprazole_Cap 30mg (E/C Gran) 	599

max_items.shape

(259, 2)

post_code_totals = post_item_totals.groupby('post_code')['items'].sum()

post_code_totals.shape

(259,)

max_items['post_totals'] = post_code_totals

max_items['proportion'] = max_items['items'] / max_items['post_totals']

max_items.drop(['items', 'post_totals'], axis=1, inplace=True)

max_items.head()

	bnf_name 	proportion
post_code 		
B11 4BW 	Salbutamol_Inha 100mcg (200 D) CFF 	0.031059
B12 9LP 	Paracet_Tab 500mg 	0.024893
B18 7AL 	Salbutamol_Inha 100mcg (200 D) CFF 	0.027111
B21 9RY 	Metformin HCl_Tab 500mg 	0.033294
B23 6DJ 	Lansoprazole_Cap 30mg (E/C Gran) 	0.021384

items_by_region = list(max_items.itertuples())[:100]

items_by_region = [("B11 4BW", 

                    "Salbutamol_Inha 100mcg (200 D) CFF", 0

                    .0310589063)] * 100

  File "<ipython-input-76-832b811f5d31>", line 3
    .0310589063)] * 100
              ^
SyntaxError: invalid syntax


